--- a/dyndns/config.ini
+++ b/dyndns/config.ini
@@ -4,5 +4,5 @@ pass = {{DNS_API_PASS}}
 base_url = https://beta.api.core-networks.de
 
 [Domain]
-dyndns_zone = fam-weyer.de
-dyndns_subdomain = ['minecraft','cloud','bitwarden','ha-endpoint']
+dyndns_zone = {{DNS_ZONE}}
+dyndns_subdomain = ['{{DNS_SUB1}}','{{DNS_SUB2}}','{{DNS_SUB3}}','{{DNS_SUB4}}']
