--- a/dyndns/config.ini
+++ b/dyndns/config.ini
@@ -1,8 +1,8 @@
 [API]
-user = {{DNS_API_USER}}
-pass = {{DNS_API_PASS}}
+user = {{API_USER}}
+pass = {{API_PASS}}
 base_url = https://beta.api.core-networks.de
 
 [Domain]
-dyndns_zone = {{DNS_ZONE}}
-dyndns_subdomain = ['{{DNS_SUB1}}','{{DNS_SUB2}}','{{DNS_SUB3}}','{{DNS_SUB4}}']
+dyndns_zone = {{ZONE}}
+dyndns_subdomain = [{{SUB1}}{{SUB2}}{{SUB3}}{{SUB4}}]
