--- a/.github/workflows/builder.yml
+++ b/.github/workflows/builder.yml
@@ -3,7 +3,7 @@ name: Build and Publish
 on:
   push:
     branches: 
-      - main
+      - master
 
 jobs:
   # define job to build and publish docker image
